--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'java'
 sourceSets {
     main {
         java {
-            srcDirs = ['src/patterns/observer/pull']
+            srcDirs = ['src/patterns/']
         }
     }
 }
